# taustubs

./: .gitignore  CMakeLists.txt  README  README.md  go.sh
examples/: CMakeLists.txt
examples/C/: matmult.c  matmult_initialize.c  matmult_initialize.h
examples/C++/: README  big_wheel.hpp  cpi.cpp
examples/Fortran/: hello.F90  hello.f
src/: CMakeLists.txt  taustubs.h  taustubsf.h  tautimer.cpp  tautimer.hpp
